# skibidi-ql

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  README.md
.agents/: README.md  contextql-agent.md  skibidi_context.py
.agents/examples/: first-turn.skql  skibidi-project-context.skql
benchmarks/: CMakeLists.txt  benchmark.cpp  compare_engines.py  context_benchmark.cpp  engine_comparison.cpp  llm_context_quality.py  mem0_quality_suite.py  native_benchmark.cpp  optimization_notes.md  run_benchmarks.py
build-sqlite-wsl/benchmarks/: skibidi_engine_comparison
examples/: aggregates.skql  contextql.skql  hello.skql  joins.skql  schema.skql  tensorql.skql
python/tensorql/: pyproject.toml
python/tensorql/tensorql/: __init__.py
src/: ast.h  cache.cpp  cache.h  codegen.cpp  codegen.h  compiler.cpp  compiler.h  executor.cpp  executor.h  hash_utils.h  lexer.cpp  lexer.h  main.cpp  metadata.cpp  metadata.h  native_aggregates.cpp  native_engine.cpp  native_engine.h  native_fast_paths.cpp  native_index.cpp  native_index.h  native_joins.cpp  native_lock.cpp  native_lock.h  native_prompt.cpp  native_raw.cpp  native_raw.h  native_storage.cpp  native_storage.h  native_vectorized.cpp  native_wal.cpp  native_wal.h  optimizer.cpp  optimizer.h  parser.cpp  parser.h  skibidi_config.cpp  skibidi_config.h
test/: CMakeLists.txt  CTestTestfile.cmake  test_cache.cpp  test_codegen.cpp  test_e2e.cpp  test_executor.cpp  test_framework.h  test_lexer.cpp  test_llm_context_quality.py  test_metadata.cpp  test_metadata_optimizer.cpp  test_native_engine.cpp  test_native_index.cpp  test_native_storage.cpp  test_optimizer.cpp  test_parser.cpp
