cmake_minimum_required(VERSION 3.14)

macro(add_skibidi_test name)
    add_executable(${name} ${name}.cpp)
    target_include_directories(${name} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
    target_link_libraries(${name} PRIVATE skibidi_core)
    skibidi_warnings(${name})
    add_test(NAME ${name} COMMAND ${name})
endmacro()

add_skibidi_test(test_lexer)
add_skibidi_test(test_parser)
add_skibidi_test(test_codegen)
add_skibidi_test(test_optimizer)
add_skibidi_test(test_metadata)
add_skibidi_test(test_cache)
add_skibidi_test(test_metadata_optimizer)
add_skibidi_test(test_native_storage)
add_skibidi_test(test_native_index)
add_skibidi_test(test_native_engine)

if(SKIBIDI_WITH_SQLITE)
    add_skibidi_test(test_e2e)
    add_skibidi_test(test_executor)
endif()
